--- a/menu.html
+++ b/menu.html
@@ -69,7 +69,7 @@
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p><b><span>Frittatina pasta patate e provola</span> <span>3,00€</span></b></p>
+                    <p><b><span>Frittatina pasta e melanzane</span> <span>3,00€</span></b></p>
                 </div>
                 <br>
                 <div class="pietanza">
@@ -240,11 +240,6 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Salsiccia e Friarielli</span><span>8,00€</span></b></p>
-                <p><span class="color-pietanza">Mozzarella, salsiccia, friarielli e olio evo</span></p>
-            </div>
-            <br>
-            <div class="pietanza">
                 <p><b><span>Croccopizza</span><span>10,00€</span></b></p>
                 <p><span class="color-pietanza">Patate al forno, provola, pancetta, funghi, crocchè, basilico e olio evo</span></p>
             </div>
@@ -290,8 +285,8 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Nerano</span><span>11,00€</span></b></p>
-                <p><span class="color-pietanza">Crema di zucchine, chips di zucchine, mozzarella, polpettine, fonduta di caciocavallo, basilico e olio evo</span></p>
+                <p><b><span>Nerano</span><span>10,00€</span></b></p>
+                <p><span class="color-pietanza">Crema di zucchine, mozzarella, pancetta,, scaglie di parmigiano</span></p>
             </div>
             <br>
             <div class="pietanza">
@@ -325,7 +320,7 @@
             <br>
 		<div class="pietanza">
                 <p><b><span>Nonna Margherita</span><span>10,00€</span></b></p>
-                <p><span class="color-pietanza">Provola, datterino giallo, datterino rosso, speck, basilico e olio evo</span></p>
+                <p><span class="color-pietanza">Mozzaarella, datterino giallo, datterino rosso, scaglie di parmigiano, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
@@ -335,7 +330,7 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Noemi</span><span>11,00€</span></b></p>
-                <p><span class="color-pietanza">Pomodoro, cornicione ripieno di ricotta, mozzarella, polpettine di carne, fonduta di parmigiano, basilico e olio evo</span></p>
+                <p><span class="color-pietanza">mozzarella, ragù alla bolognese, scaglie di caciocavallo, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
@@ -349,8 +344,8 @@
             </div>
 		<br>
             <div class="pietanza">
-                <p><b><span>Onna Rosa</span><span>9,00€</span></b></p>
-                <p><span class="color-pietanza">Provola, pancetta, funghi porcini, chips di zucchine, basilico e olio evo</span></p>
+                <p><b><span>Rosellì</span><span>8,00€</span></b></p>
+                <p><span class="color-pietanza">Provola affumicata, panna, prosciutto cotto, crocchè artigianale, basilico e olio evo</span></p>
             </div>
         </div>
     </div>
@@ -384,7 +379,7 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Tronchetto</span><span>10,00€</span></b></p>
-                <p><span class="color-pietanza">Emmenthal, mozzarella, prosciutto crudo, scaglie di parmigiano, rucola e pomodorini</span></p>
+                <p><span class="color-pietanza">Emmenthal, mozzarella, caciocavallo, prosciutto crudo, scaglie di parmigiano, rucola e pomodorini</span></p>
             </div>
         </div>
     </div>
@@ -414,11 +409,6 @@
             <div class="pietanza">
                 <p><b><span>Baby</span><span>8,00€</span></b></p>
                 <p><span class="color-pietanza">Wurstel, patatine stick, provola, maionese</span></p>
-            </div>
-            <br>
-            <div class="pietanza">
-                <p><b><span>Forenza</span><span>8,00€</span></b></p>
-                <p><span class="color-pietanza">Salsiccia, friarielli, provola</span></p>
             </div>
             <br>
             <div class="pietanza">
@@ -517,30 +507,6 @@
     </div>
 </section>
 
-<section id="menu">
-    <div class="box">
-        <br>
-        <p class="title">BIRRE ALLA SPINA</p>
-        <hr>
-        <div class="container-menu">
-            <div class="pietanza">
-                <p><b><span>Stella artois piccola</span> <span>3,00€</span></b></p>
-            </div>
-            <br>
-            <div class="pietanza">
-                <p><b><span>Stella artois grande</span> <span>5,00€</span></b></p>
-            </div>
-            <br>
-            <div class="pietanza">
-                <p><b><span>Leffe rossa piccola</span> <span>4,00€</span></b></p>
-            </div>
-            <br>
-            <div class="pietanza">
-                <p><b><span>Leffe rossa grande</span> <span>7,00€</span></b></p>
-            </div>
-        </div>
-    </div>
-</section>
 
 <section id="menu">
     <div class="box">
