--- a/menu.html
+++ b/menu.html
@@ -69,11 +69,15 @@
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p><b><span>Frittatina pasta e melanzane</span> <span>3,00€</span></b></p>
+                    <p><b><span>Frittatina pasta alla norma</span> <span>3,00€</span></b></p>
                 </div>
                 <br>
                 <div class="pietanza">
                     <p><b><span>Frittatina mortadella e pistacchio</span> <span>3,00€</span></b></p>
+                </div>
+                <br>
+		<div class="pietanza">
+                    <p><b><span>Frittatina pasta patate e provola</span> <span>3,00€</span></b></p>
                 </div>
                 <br>
                 <div class="pietanza">
@@ -123,6 +127,10 @@
                 <p><b><span>Patatina fritta con Wurstel e Cheddar</span> <span>6,00€</span></b></p>
             </div>
             <br>
+	<div class="pietanza">
+                <p><b><span>Patatina fritta alla zingara </span> <span>6,00€</span></b></p>
+            </div>
+            <br>
             <div class="pietanza">
                 <p><b><span>Patatina fritta con Bacon e Cheddar</span> <span>6,00€</span></b></p>
             </div>
@@ -137,6 +145,11 @@
         <br>
         <p class="title">LE MONTANARE</p>
         <hr>
+	<div class="container-menu">
+            <div class="pietanza">
+                <p><b><span>Montanara grande classica</span> <span>6,00€</span></b></p>
+            </div>
+            <br>
         <div class="container-menu">
             <div class="pietanza">
                 <p><b><span>Tris di montanare</span> <span>6,00€</span></b></p>
@@ -165,7 +178,7 @@
         <hr>
         <div class="container-menu">
             <div class="pietanza">
-                <p><b><span>Marinara</span> <span>4,00€</span></b></p>
+                <p><b><span>Marinara</span> <span>4,50€</span></b></p>
                 <p><span class="color-pietanza">Pomodoro, origano, aglio, acciughe, olive</span></p>
             </div>
             <br>
@@ -190,7 +203,7 @@
             </div>
             <br>
 		 <div class="pietanza">
-                <p><b><span>Primavera</span><span>6,00€</span></b></p>
+                <p><b><span>Primavera</span><span>10,00€</span></b></p>
                 <p><span class="color-pietanza">Mozzarella, prosciutto crudo, pomodorini,rucola,scaglie di parmigiano e olio evo</span></p>
             </div>
             <br>
@@ -200,7 +213,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Provola e Pepe</span> <span>6,00€</span></b></p>
+                <p><b><span>Provola e Pepe</span> <span>8,00€</span></b></p>
                 <p><span class="color-pietanza">Pomodoro, provola, pepe, basilico e olio evo</span></p>
             </div>
             <br>
@@ -210,7 +223,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Capricciosa</span><span>8,00€</span></b></p>
+                <p><b><span>Capricciosa</span><span>9,00€</span></b></p>
                 <p><span class="color-pietanza">Pomodoro, carciofi, olive, salame, prosciutto cotto, funghi, basilico e olio evo</span></p>
             </div>
             <br>
@@ -225,17 +238,17 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Tonnarella</span><span>7,00€</span></b></p>
+                <p><b><span>Tonnarella</span><span>8,00€</span></b></p>
                 <p><span class="color-pietanza">Mozzarella, tonno, cipolla, basilico e olio evo</span></p>
             </div>
             <br>
              <div class="pietanza">
-                <p><b><span>Ortolana</span><span>8,00€</span></b></p>
+                <p><b><span>Ortolana</span><span>7,00€</span></b></p>
                 <p><span class="color-pietanza">Peperoni, crema di zucchine, zucchine, melanzane, mozzarella, basilico e olio evo</span></p>
             </div>
             <br>
              <div class="pietanza">
-                <p><b><span>Mimosa</span><span>7,00€</span></b></p>
+                <p><b><span>Mimosa</span><span>8,00€</span></b></p>
                 <p><span class="color-pietanza">Panna, mais, prosciutto cotto, basilico e olio evo</span></p>
             </div>
             <br>
@@ -245,7 +258,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Fungarella</span><span>6,50€</span></b></p>
+                <p><b><span>Fungarella</span><span>6,00€</span></b></p>
                 <p><span class="color-pietanza">Pomodoro, mozzarella, funghi champignon, origano, basilico e olio evo</span></p>
             </div>
             <br>
@@ -254,13 +267,18 @@
                 <p><span class="color-pietanza">Pomodoro, mozzarella, prosciutto cotto, funghi champignon, origano, basilico e olio evo</span></p>
             </div>
             <br>
+		<div class="pietanza">
+                <p><b><span>Salsiccia e friarielli</span><span>9,00€</span></b></p>
+                <p><span class="color-pietanza">Mozzarella, salsiccia, friarielli, basilico e olio evo</span></p>
+            </div>
+            <br>
              <div class="pietanza">
                 <p><b><span>Fiocco</span><span>9,00€</span></b></p>
                 <p><span class="color-pietanza">Mozzarella, vellutata di patate, prosciutto cotto, pepe, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Quattro Formaggi</span><span>9,00€</span></b></p>
+                <p><b><span>Cinque Formaggi</span><span>9,00€</span></b></p>
                 <p><span class="color-pietanza">Caciocavallo, provola affumicata, gorgonzola, emmenthal, parmigiano, basilico e olio evo</span></p>
             </div>
             <br>
@@ -329,7 +347,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Noemi</span><span>11,00€</span></b></p>
+                <p><b><span>Noemi</span><span>10,00€</span></b></p>
                 <p><span class="color-pietanza">mozzarella, ragù alla bolognese, scaglie di caciocavallo, basilico e olio evo</span></p>
             </div>
             <br>
@@ -394,6 +412,11 @@
 		<div class="pietanza">
                 <p><b><span>Irpino</span><span>10,00€</span></b></p>
                 <p><span class="color-pietanza">Crema di tartufo, provola affumicata, funghi porcini, patate al forno</span></p>
+            </div>
+            <br>
+	<div class="pietanza">
+                <p><b><span>Forenza</span><span>8,00€</span></b></p>
+                <p><span class="color-pietanza">Provola, salsiccia e friarielli</span></p>
             </div>
             <br>
            <div class="pietanza">
