--- a/menu.html
+++ b/menu.html
@@ -213,13 +213,18 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Provola e Pepe</span> <span>8,00€</span></b></p>
+                <p><b><span>Provola e Pepe</span> <span>6,00€</span></b></p>
                 <p><span class="color-pietanza">Pomodoro, provola, pepe, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
                 <p><b><span>Bufalina</span><span>8,00€</span></b></p>
                 <p><span class="color-pietanza">Pomodoro, mozzarella di bufala, basilico e olio evo</span></p>
+            </div>
+            <br> 
+	    <div class="pietanza">
+	    <p><b><span>Biancaneve</span><span>4,50€</span></b></p>
+	    <p><span class="color-pietanza"> Mozzarella, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
@@ -238,7 +243,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Tonnarella</span><span>8,00€</span></b></p>
+                <p><b><span>Tonnarella</span><span>7,00€</span></b></p>
                 <p><span class="color-pietanza">Mozzarella, tonno, cipolla, basilico e olio evo</span></p>
             </div>
             <br>
@@ -248,7 +253,7 @@
             </div>
             <br>
              <div class="pietanza">
-                <p><b><span>Mimosa</span><span>8,00€</span></b></p>
+                <p><b><span>Mimosa</span><span>7,00€</span></b></p>
                 <p><span class="color-pietanza">Panna, mais, prosciutto cotto, basilico e olio evo</span></p>
             </div>
             <br>
@@ -268,7 +273,7 @@
             </div>
             <br>
 		<div class="pietanza">
-                <p><b><span>Salsiccia e friarielli</span><span>9,00€</span></b></p>
+                <p><b><span>Salsiccia e friarielli</span><span>8,00€</span></b></p>
                 <p><span class="color-pietanza">Mozzarella, salsiccia, friarielli, basilico e olio evo</span></p>
             </div>
             <br>
@@ -337,7 +342,7 @@
             </div>
             <br>
 		<div class="pietanza">
-                <p><b><span>Nonna Margherita</span><span>10,00€</span></b></p>
+                <p><b><span>Nonna Margherita</span><span>8,00€</span></b></p>
                 <p><span class="color-pietanza">Mozzaarella, datterino giallo, datterino rosso, scaglie di parmigiano, basilico e olio evo</span></p>
             </div>
             <br>
