--- a/menu.html
+++ b/menu.html
@@ -309,7 +309,7 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Nerano</span><span>10,00€</span></b></p>
-                <p><span class="color-pietanza">Crema di zucchine, mozzarella, pancetta,, scaglie di parmigiano</span></p>
+                <p><span class="color-pietanza">Crema di zucchine, mozzarella, polpettine, scaglie di parmigiano</span></p>
             </div>
             <br>
             <div class="pietanza">
@@ -353,7 +353,7 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Noemi</span><span>10,00€</span></b></p>
-                <p><span class="color-pietanza">mozzarella, ragù alla bolognese, scaglie di caciocavallo, basilico e olio evo</span></p>
+                <p><span class="color-pietanza">mozzarella, polpettine, scaglie di caciocavallo, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
