--- a/menu.html
+++ b/menu.html
@@ -64,20 +64,8 @@
                     <p><b><span>Frittatina classica </span> <span>3,00€</span></b></p>
                 </div>
                 <br>
-                <div class="pietanza">
-                    <p><b><span>Frittatina cacio e pepe </span> <span>3,00€</span></b></p>
-                </div>
-                <br>
-                <div class="pietanza">
-                    <p><b><span>Frittatina pasta alla norma</span> <span>3,00€</span></b></p>
-                </div>
-                <br>
-                <div class="pietanza">
-                    <p><b><span>Frittatina mortadella e pistacchio</span> <span>3,00€</span></b></p>
-                </div>
-                <br>
 		<div class="pietanza">
-                    <p><b><span>Frittatina pasta patate e provola</span> <span>3,00€</span></b></p>
+                    <p><b><span>Frittatina del mese</span> <span>3,00€</span></b></p>
                 </div>
                 <br>
                 <div class="pietanza">
@@ -100,38 +88,48 @@
                     <p><b><span>Crocchettone cacio e pepe con fonduta di caciocavallo</span> <span>4,00€</span></b></p>
                 </div>
                 <br>
+		 <div class="pietanza">
+                 <p><b><span>Arancino alla bolognese</span> <span>2,50€</span></b></p>
+                </div>
+                <br>
                 <div class="pietanza">
-                    <p><b><span>Arancino classico</span> <span>2,00€</span></b></p>
-<div class="pietanza">
+                 <p><b><span>Arancino allo zafferano</span> <span>2,50€</span></b></p>
+		 </div>
+                <br>
+		<div class="pietanza">
+                <p><b><span>Mozzarellina panata</span> <span>1,50€</span></b></p>
+                </div>
+                <br>
+		<div class="pietanza">
                     <p><b><span>Fritto misto dalia</span> <span>7,00€</span></b></p>
                 </div>
                 <br>
-	<div class="pietanza">
+		<div class="pietanza">
                 <p><b><span>Patatina fritta stick piccola</span> <span>3,00€</span></b></p>
-            </div>
-            <br>
-             <div class="container-menu">
-            <div class="pietanza">
+           	</div>
+          	<br>
+                <div class="container-menu">
+                <div class="pietanza">
                 <p><b><span>Patatina fritta stick grande</span> <span>5,00€</span></b></p>
-            </div>
-            <br>
-            <div class="pietanza">
+                </div>
+                <br>
+                <div class="pietanza">
                 <p><b><span>Patatina fritta dippers</span> <span>5,00€</span></b></p>
-            </div>
-            <br>
-            <div class="pietanza">
+                </div>
+                <br>
+                <div class="pietanza">
                 <p><b><span>Patatina fritta chips</span> <span>5,00€</span></b></p>
-            </div>
-            <br>
-            <div class="pietanza">
+                </div>
+                <br>
+                <div class="pietanza">
                 <p><b><span>Patatina fritta con Wurstel e Cheddar</span> <span>6,00€</span></b></p>
-            </div>
-            <br>
-	<div class="pietanza">
+                </div>
+                <br>
+	        <div class="pietanza">
                 <p><b><span>Patatina fritta alla zingara </span> <span>6,00€</span></b></p>
-            </div>
-            <br>
-            <div class="pietanza">
+            	</div>
+            	<br>
+            	<div class="pietanza">
                 <p><b><span>Patatina fritta con Bacon e Cheddar</span> <span>6,00€</span></b></p>
             </div>
         </div>
