--- a/menu.html
+++ b/menu.html
@@ -65,6 +65,10 @@
                 </div>
                 <br>
 		<div class="pietanza">
+                    <p><b><span>Frittatina cacio e pepe</span> <span>3,00€</span></b></p>
+                </div>
+                <br>
+		<div class="pietanza">
                     <p><b><span>Frittatina del mese</span> <span>3,00€</span></b></p>
                 </div>
                 <br>
@@ -565,7 +569,13 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Taurasi</span> <span>30,00€</span></b></p>
+                <p><b><span>Vino bianco e rosso locale 0,25 </span> <span>3,00€</span></b></p>
+            </div>
+		<div class="pietanza">
+                <p><b><span>Vino bianco e rosso locale 0,50 </span> <span>5,00€</span></b></p>
+            </div>
+		<div class="pietanza">
+                <p><b><span>Vino bianco e rosso locale litro </span> <span>9,00€</span></b></p>
             </div>
             <div class="pietanza">
                 <p><b><span>Vino in bicchiere rosso</span> <span>4,00€</span></b></p>
@@ -616,10 +626,6 @@
         <hr>
         <div class="container-menu">
             <div class="pietanza">
-                <p><b><span>Cannolo scomposto</span> <span>4,00€</span></b></p>
-            </div>
-            <br>
-            <div class="pietanza">
                 <p><b><span>Tiramisù</span> <span>4,00€</span></b></p>
             </div>
             <br>
@@ -666,7 +672,7 @@
         <hr>
         <div class="container-menu">
             <div class="pietanza">
-                <p><b><span>Coperto</span> <span> 1,50€</span></b></p>
+                <p><b><span>Coperto</span> <span> 2,00€</span></b></p>
             </div>
         </div>
         <br>
