--- a/menu.html
+++ b/menu.html
@@ -40,14 +40,14 @@
             <hr>
             <div class="container-menu">
                 <div class="pietanza">
-                    <p><b><span>Bresaola rucola parmigiano e pomodorini</span> <span>10,00€</span></b></p>
+                    <p><b><span>Bresaola rucola parmigiano e pomodorini</span> <span>13,00€</span></b></p>
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p><b><span>Prosciutto crudo e mozzarella di bufala</span> <span>10,00€</span></b></p>
+                    <p><b><span>Prosciutto crudo e mozzarella di bufala</span> <span>13,00€</span></b></p>
                 </div>
 <div class="pietanza">
-                    <p><b><span>Antipasto all’italiana</span> <span>10,00€</span></b></p>
+                    <p><b><span>Antipasto all’italiana</span> <span>13,00€</span></b></p>
                 </div>
             </div>
         </div>
@@ -417,8 +417,8 @@
         <hr>
         <div class="container-menu">
 		<div class="pietanza">
-                <p><b><span>Irpino</span><span>10,00€</span></b></p>
-                <p><span class="color-pietanza">Crema di tartufo, provola affumicata, funghi porcini, patate al forno</span></p>
+                <p><b><span>Irpino</span><span>11,00€</span></b></p>
+                <p><span class="color-pietanza">Crema di tartufo, provola affumicata, funghi porcini, patate al forno e salsiccia </span></p>
             </div>
             <br>
 	<div class="pietanza">
