--- a/menu.html
+++ b/menu.html
@@ -61,15 +61,23 @@
             <hr>
             <div class="container-menu">
            <div class="pietanza">
-                    <p><b><span>Frittatina classica </span> <span>3,00€</span></b></p>
+                    <p><b><span>Frittatina classica </span> <span>2,00€</span></b></p>
                 </div>
                 <br>
 		<div class="pietanza">
-                    <p><b><span>Frittatina cacio e pepe</span> <span>3,00€</span></b></p>
+                    <p><b><span>Frittatina cacio e pepe</span> <span>2,00€</span></b></p>
                 </div>
                 <br>
 		<div class="pietanza">
-                    <p><b><span>Frittatina del mese</span> <span>3,00€</span></b></p>
+                    <p><b><span>Frittatina del mese</span> <span>2,00€</span></b></p>
+                </div>
+                <br>
+		    <div class="pietanza">
+                    <p><b><span>Tris di frittatine</span> <span>5,00€</span></b></p>
+                </div>
+                <br>
+		    <div class="pietanza">
+                     <p><b><span> Tris di calzoncelli </span> <span>7,00€</span></b></p>
                 </div>
                 <br>
                 <div class="pietanza">
@@ -93,15 +101,15 @@
                 </div>
                 <br>
 		 <div class="pietanza">
-                 <p><b><span>Arancino alla bolognese</span> <span>2,50€</span></b></p>
+                 <p><b><span>Arancino alla bolognese</span> <span>1,00€</span></b></p>
                 </div>
                 <br>
                 <div class="pietanza">
-                 <p><b><span>Arancino allo zafferano</span> <span>2,50€</span></b></p>
+                 <p><b><span>Arancino allo zafferano</span> <span>1,00€</span></b></p>
 		 </div>
                 <br>
 		<div class="pietanza">
-                <p><b><span>Mozzarellina panata</span> <span>1,50€</span></b></p>
+                <p><b><span>Mozzarella in carrozza</span> <span>1,50€</span></b></p>
                 </div>
                 <br>
 		<div class="pietanza">
@@ -130,7 +138,7 @@
                 </div>
                 <br>
 	        <div class="pietanza">
-                <p><b><span>Patatina fritta alla zingara </span> <span>6,00€</span></b></p>
+                <p><b><span>Patatina fritta alla zingara </span> <span>7,00€</span></b></p>
             	</div>
             	<br>
             	<div class="pietanza">
