--- a/menu.html
+++ b/menu.html
@@ -525,19 +525,15 @@
         <hr>
         <div class="container-menu">
             <div class="pietanza">
-                <p><b><span>Vino Bianco frizzante Pizza Wine bott.0,75 cl</span> <span>12,00€</span></b></p>
+                <p><b><span>Lancers bott.0,75 cl</span> <span>15,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Vino rosso Gragnano bott. 0,75 cl</span> <span>15,00€</span></b></p>
+                <p><b><span>Falanghina D.O.C.</span> <span>20,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Falanghina</span> <span>15,00€</span></b></p>
-            </div>
-            <br>
-            <div class="pietanza">
-                <p><b><span>Greco di tufo</span> <span>15,00€</span></b></p>
+                <p><b><span>Greco di tufo D.O.C.G.</span> <span>30,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
@@ -545,7 +541,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Fiano di Avellino</span> <span>30,00€</span></b></p>
+                <p><b><span>Fiano di Avellino D.O.C.G.</span> <span>30,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
@@ -556,12 +552,6 @@
             </div>
 		<div class="pietanza">
                 <p><b><span>Vino bianco e rosso locale litro </span> <span>9,00€</span></b></p>
-            </div>
-            <div class="pietanza">
-                <p><b><span>Vino in bicchiere rosso</span> <span>4,00€</span></b></p>
-            </div>
-            <div class="pietanza">
-                <p><b><span>Vino in bicchiere bianco</span> <span>4,00€</span></b></p>
             </div>
         </div>
     </div>
