--- a/menu.html
+++ b/menu.html
@@ -470,6 +470,14 @@
                 <p><b><span>Beck's 33 cl</span> <span>3,00€</span></b></p>
             </div>
             <br>
+		<div class="pietanza">
+                <p><b><span>Birra alla spina piccola 0,20 cl</span> <span>3,00€</span></b></p>
+            </div>
+            <br>
+		<div class="pietanza">
+                <p><b><span>Birra alla spinga grande 40 cl</span> <span>5,00€</span></b></p>
+            </div>
+            <br>
             <div class="pietanza">
                 <p><b><span>Heineken 33 cl</span> <span>3,00€</span></b></p>
             </div>
