--- a/menu.html
+++ b/menu.html
@@ -604,7 +604,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p><b><span>Cuore caldo cioccolato/cioccolato bianco/pistacchio</span> <span>5,00€</span></b></p>
+                <p><b><span>Cuore caldo cioccolato/cioccolato bianco</span> <span>5,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
