--- a/menu.html
+++ b/menu.html
@@ -157,12 +157,12 @@
         <div class="container-menu">
             <div class="pietanza">
                 <p><b><span>Marinara</span> <span>4,50€</span></b></p>
-                <p><span class="color-pietanza">Pomodoro, origano, aglio, acciughe, olive</span></p>
+                <p><span class="color-pietanza">Pomodoro, origano, aglio, acciughe, olive e olio evo</span></p>
             </div>
             <br>
               <div class="pietanza">
                 <p><b><span>Napoletana</span> <span>4,00€</span></b></p>
-                <p><span class="color-pietanza">Pomodoro, origano, aglio, olio evo</span></p>
+                <p><span class="color-pietanza">Pomodoro, origano, aglio e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
@@ -182,7 +182,7 @@
             <br>
 		 <div class="pietanza">
                 <p><b><span>Primavera</span><span>10,00€</span></b></p>
-                <p><span class="color-pietanza">Mozzarella, prosciutto crudo, pomodorini,rucola,scaglie di parmigiano e olio evo</span></p>
+                <p><span class="color-pietanza">Mozzarella, prosciutto crudo, pomodorini, rucola ,scaglie di parmigiano e olio evo</span></p>
             </div>
             <br>
               <div class="pietanza">
