--- a/menu.html
+++ b/menu.html
@@ -210,6 +210,11 @@
                 <p><span class="color-pietanza">Pomodoro, carciofi, olive, salame, prosciutto cotto, funghi, basilico e olio evo</span></p>
             </div>
             <br>
+	    <div class="pietanza">
+                <p><b><span>Pitta</span><span>8,00€</span></b></p>
+                <p><span class="color-pietanza">Pomodoro, mozzarella , salsiccia, patatine fritte, basilico e olio evo</span></p>
+            </div>
+            <br>
             <div class="pietanza">
                 <p><b><span>Americana</span><span>7,00€</span></b></p>
                 <p><span class="color-pietanza">Mozzarella , pomodoro, wurstel, patatine, basilico e olio evo</span></p>
@@ -218,6 +223,11 @@
              <div class="pietanza">
                 <p><b><span>Tedesca</span><span>7,00€</span></b></p>
                 <p><span class="color-pietanza">Mozzarella , wurstel, patatine, basilico e olio evo</span></p>
+            </div>
+            <br>
+		<div class="pietanza">
+                <p><b><span>Panciamia</span><span>9,00€</span></b></p>
+                <p><span class="color-pietanza">Mozzarella , pancetta, patate al forno, basilico e olio evo</span></p>
             </div>
             <br>
             <div class="pietanza">
