--- a/menu.html
+++ b/menu.html
@@ -226,7 +226,7 @@
             </div>
             <br>
 		<div class="pietanza">
-                <p><b><span>Panciamia</span><span>9,00€</span></b></p>
+                <p><b><span>Panciamia</span><span>8,00€</span></b></p>
                 <p><span class="color-pietanza">Mozzarella , pancetta, patate al forno, basilico e olio evo</span></p>
             </div>
             <br>
@@ -405,6 +405,12 @@
 		<div class="pietanza">
                 <p><b><span>Irpino</span><span>11,00€</span></b></p>
                 <p><span class="color-pietanza">Crema di tartufo, provola affumicata, funghi porcini, patate al forno e salsiccia </span></p>
+            </div>
+            <br>
+		 <div class="container-menu">
+		<div class="pietanza">
+                <p><b><span>Favola</span><span>11,00€</span></b></p>
+                <p><span class="color-pietanza">Crema di pistacchioi, mortadella, stracciata di bufala, pistacchi </span></p>
             </div>
             <br>
 	<div class="pietanza">
