--- a/menu.html
+++ b/menu.html
@@ -109,9 +109,10 @@
                 </div>
                 <br>
 		<div class="pietanza">
-                    <p><b><span>Fritto misto dalia</span> <span>10,00€</span></b></p>
-                </div>
-                <br>
+                <p><b><span>Fritto Misto Dalia</span><span>7,00€</span></b></p>
+                <p><span class="color-pietanza">contorno di patatine, crocchè, arancino, frittatina, 1 stick di mozzarella</span></p>
+            </div>
+            <br>
 		<div class="pietanza">
                 <p><b><span>Patatina fritta stick piccola</span> <span>3,00€</span></b></p>
            	</div>
@@ -409,7 +410,7 @@
             <br>
 		 <div class="container-menu">
 		<div class="pietanza">
-                <p><b><span>Favola</span><span>11,00€</span></b></p>
+                <p><b><span>Favola</span><span>9,00€</span></b></p>
                 <p><span class="color-pietanza">Crema di pistacchioi, mortadella, stracciata di bufala, pistacchi </span></p>
             </div>
             <br>
@@ -419,7 +420,7 @@
             </div>
             <br>
            <div class="pietanza">
-                <p><b><span>San Patrignano</span><span>8,00€</span></b></p>
+                <p><b><span>San Patrignano</span><span>9,00€</span></b></p>
                 <p><span class="color-pietanza">Prosciutto crudo, mozzarella, pomodorini</span></p>
             </div>
             <br>
