--- a/menu.html
+++ b/menu.html
@@ -352,7 +352,7 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Nonno Vincenzo</span><span>9,00€</span></b></p>
-                <p><span class="color-pietanza">Pomodoro, mozzarella, salsiccia, funghi porcini, provola affumicata, pepe, basilico e olio evo</span></p>
+                <p><span class="color-pietanza">Pomodoro, salsiccia, funghi porcini, provola affumicata, pepe, basilico e olio evo</span></p>
             </div>
 		<br>
             <div class="pietanza">
