--- a/menu.html
+++ b/menu.html
@@ -105,7 +105,7 @@
 		 </div>
                 <br>
 		<div class="pietanza">
-                <p><b><span>Mozzarella in carrozza</span> <span>1,50€</span></b></p>
+                <p><b><span>Stick di mozzarella</span> <span>2,00€</span></b></p>
                 </div>
                 <br>
 		<div class="pietanza">
@@ -130,6 +130,10 @@
                 <p><b><span>Patatina fritta chips</span> <span>5,00€</span></b></p>
                 </div>
                 <br>
+		<div class="pietanza">
+                <p><b><span>Patatina fritta twisters</span> <span>6,00€</span></b></p>
+           	</div>
+          	<br>
                 <div class="pietanza">
                 <p><b><span>Patatina fritta con Wurstel e Cheddar</span> <span>7,00€</span></b></p>
                 </div>
@@ -488,11 +492,11 @@
             </div>
             <br>
 		<div class="pietanza">
-                <p><b><span>Birra alla spina piccola 0,20 cl</span> <span>3,00€</span></b></p>
+                <p><b><span>Tuborg alla spina piccola 0,20 cl</span> <span>3,00€</span></b></p>
             </div>
             <br>
 		<div class="pietanza">
-                <p><b><span>Birra alla spinga grande 40 cl</span> <span>5,00€</span></b></p>
+                <p><b><span>Tuborg alla spinga grande 40 cl</span> <span>5,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
@@ -505,6 +509,22 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Nastro Azzurro 33 cl</span> <span>3,00€</span></b></p>
+            </div>
+            <br>
+	    <div class="pietanza">
+                <p><b><span>Ichnusa 33 cl</span> <span>3,00€</span></b></p>
+            </div>
+            <br>
+		<div class="pietanza">
+                <p><b><span>Ichnusa 66 cl</span> <span>5,00€</span></b></p>
+            </div>
+            <br>
+	    <div class="pietanza">
+	     <p><b><span>Ichnusa non filtrata 33 cl</span> <span>3,00€</span></b></p>
+            </div>
+            <br>
+		 <div class="pietanza">
+                <p><b><span>Ichnusa non filtrata 50cl</span> <span>5,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
@@ -525,6 +545,10 @@
             <br>
             <div class="pietanza">
                 <p><b><span>Leffe Rossa 75cl</span> <span>8,00€</span></b></p>
+            </div>
+            <br>
+	    <div class="pietanza">
+	    <p><b><span>Birra artigianale 50cl</span> <span>9,00€</span></b></p>
             </div>
             <br>
             <div class="pietanza">
